# cstx-hackathon-juni-26

./: .gitignore  README.md  SELFASSESSMENT.md  chargecast.tar
chargecast/: .gitignore  BUILD_PLAN_v2.md  HANDOFF.md  README.md  pyproject.toml  run_simulation.py
chargecast/chargecast/: __init__.py  cli.py  core.py  dataio.py  demand_forecast_model.py  recommend.py  store.py
chargecast/dummy_data/: ev_charging_2026-06-08.csv  ev_charging_2026-06-09.csv  ev_charging_2026-06-10.csv  ev_charging_2026-06-11.csv  ev_charging_2026-06-12.csv  ev_charging_2026-06-13.csv  ev_charging_2026-06-14.csv  generate_dummy_data.py  simulated_data_2026-06-01.csv  simulated_data_2026-06-02.csv  simulated_data_2026-06-03.csv  simulated_data_2026-06-09.csv
chargecast/examples/: actuals_example.csv  build_training_data.py  prices_example.csv  train_model.py  training_data.csv
chargecast/simulated_data/: generate_simulated_data.py  simulated_data_2026-06-04.csv  simulated_data_2026-06-05.csv  simulated_data_2026-06-06.csv  simulated_data_2026-06-08.csv  simulated_data_2026-06-10.csv  simulated_data_2026-06-11.csv  simulated_data_2026-06-12.csv  simulated_data_2026-06-13.csv  simulated_data_2026-06-16.csv  simulated_data_2026-06-19.csv  simulated_data_2026-06-20.csv  simulated_data_2026-06-25.csv  simulated_data_2026-06-26.csv  simulated_data_2026-06-28.csv  simulated_data_2026-06-30.csv  simulated_data_2026-07-01.csv  simulated_data_2026-07-03.csv  simulated_data_2026-07-04.csv  simulated_data_2026-07-05.csv  simulated_data_2026-07-06.csv  simulated_data_2026-07-09.csv  (+28 more)
state/: model.pkl  (+2 more)
(+202 files in other folders)
