[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "chargecast"
version = "2.1.0"
description = "Self-improving daily demand forecaster for an EV charging hub"
requires-python = ">=3.9"
dependencies = ["pandas", "numpy", "scikit-learn", "openpyxl"]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
chargecast = "chargecast.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["chargecast*"]
